fix navdrawer overlapsing problem

--- a/less/styles.less
+++ b/less/styles.less
@@ -137,7 +137,7 @@
     #lpb-modal {
         display: none;
         position: fixed;
-        z-index: 100;
+        z-index: 1000;
         left: 0;
         top: 0;
         width: 100%;
